--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,21 @@
 </head>
 
 <body>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2">
+
+            {% block sidebar %}
+                {% include "includes/sidebar.html" %}
+            {% endblock %}
+
+        </div>
+        <div class="col-sm-10 ">
+
             {% block content %}{% endblock %}
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
