--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -18,7 +18,7 @@
       <tr>
         <td>{{ tag.name }}</td>
         <td><a href="{% url 'todo:tag-update' pk=tag.id %}" class="btn btn-secondary">Update</a></td>
-        <td>#</td>
+        <td><a href="{% url 'todo:tag-delete' pk=tag.id %}" class="btn btn-secondary">Delete</a></td>
       </tr>
     {% endfor %}
     {% endif %}
