add url, view and template for updating tasks

--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -21,5 +21,6 @@
         <td><a href="{% url 'todo:tag-delete' pk=tag.id %}" class="btn btn-secondary">Delete</a></td>
       </tr>
     {% endfor %}
+    </table>
     {% endif %}
 {% endblock %}
