--- a/templates/todo/task_list.html
+++ b/templates/todo/task_list.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>TODO list</h1>
+  <h1>
+    TODO list
+    <a href="{% url 'todo:task-create' %}" class="btn btn-primary link-to-page">
+      Add task
+    </a>
+  </h1>
+  {% for task in task_list %}
+    <p>
+      <strong>
+        {{ task.content }}
+      {% if task.is_completed %}
+        <span style="color: green">Done</span>
+      {% else %}
+        <span style="color: red">Not done</span>
+      {% endif %}
+      </strong>
+    </p>
+    <p>Created: {{ task.date }}</p>
+    <p>
+      Tags: {{ task.tag_list }}
+      <a href="{% url 'todo:task-update' pk=task.id %}">Update</a>
+    </p>
+    <hr>
+  {% endfor %}
 {% endblock %}
