--- a/templates/todo/task_form.html
+++ b/templates/todo/task_form.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>{{ object|yesno:"Update,Create" }} Task</h1>
   <form action="" method="post" novalidate>
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
 
     <input type="submit" value="Submit" class="btn btn-primary">
   </form>
